# arcan

./: .dockerignore  .editorconfig  .eslintignore  .gitignore  .prettierignore  .prettierrc  .taskmasterconfig  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.control  README.md  alembic.ini  clippy.toml  deny.toml  docker-compose.yml  env.example  implementation-roadmap.md  package-lock.json  package.json  plan.md  pyproject.toml  release.toml  rustfmt.toml  turbo.json  vercel.json  vitest.config.ts  vitest.setup.ts
apps/api/: package.json  pyproject.toml
apps/api/src/: main.py
arcan/: Cargo.toml  __init__.py
arcan-anima/: Cargo.toml
arcan-anima/src/: lib.rs
arcan-api-schema/: Cargo.toml
arcan-api-schema/src/: lib.rs
arcan-console/: CHANGELOG.md  Cargo.toml
arcan-console/frontend/: vite.config.ts
arcan-console/frontend/src/: main.tsx
arcan-console/src/: lib.rs
arcan-ergon/: CLAUDE.md  Cargo.toml
arcan-ergon/src/: dispatcher.rs  error.rs  hooks.rs  lib.rs  provider.rs  registry.rs  runner.rs  runtime_handle.rs  tools.rs
arcan-ergon/tests/: agents_fixtures.rs  anthropic_agents_smoke.rs  anthropic_workflow.rs  workflow_tick_e2e.rs
arcan-opsis/: Cargo.toml
arcan-opsis/src/: client.rs  injector.rs  lib.rs  observer.rs  tools.rs
arcan-praxis/: Cargo.toml
arcan-praxis/src/: lib.rs  registry.rs  sandbox_runner.rs
arcan-prosopon/: Cargo.toml  README.md
arcan-prosopon/src/: bridge.rs  error.rs  lib.rs  state.rs  translator.rs
arcan-prosopon/tests/: bridge_integration.rs
arcan-provider-cube/: Cargo.toml  README.md
arcan-provider-cube/src/: client.rs  convert.rs  error.rs  lib.rs  types.rs
arcan-provider-cube/tests/: unit_create_destroy.rs  unit_errors.rs  unit_filesystem.rs  unit_retry.rs
arcan-provider-local/: Cargo.toml
arcan-provider-local/src/: lib.rs
arcan-sandbox/: Cargo.toml
arcan-sandbox/src/: capability.rs  error.rs  journaled.rs  lib.rs  provider.rs  service.rs
arcan-spaces/: CHANGELOG.md  Cargo.toml
arcan-spaces/src/: hive.rs  lib.rs  mock.rs  port.rs
arcan/ai/agents/: __init__.py  session.py
arcan/ai/graphs/: __init__.py
arcan/ai/interface/: app.py  chainlit.md
arcan/ai/llm/: __init__.py
arcan/ai/prompts/: __init__.py
arcan/ai/router/: __init__.py
arcan/ai/runnables/: __init__.py
arcan/ai/tools/: __init__.py
arcan/api/: __init__.py  auth.py
arcan/api/datamodel/: __init__.py  chat_history.py  conversation.py  engine.py  user.py
arcan/api/datamodels/: __init__.py  conversations.py
arcan/api/session/: __init__.py  auth.py
arcan/casters/: decorators.py  observer.py
arcan/datamodel/: chat_history.py  conversation.py  engine.py  user.py
arcan/forge/: __init__.py
arcan/forge/api/: __init__.py  auth.py
arcan/forge/config/: __init__.py
arcan/forge/core/: config.py
arcan/forge/database/: session.py  tables.py
arcan/forge/exceptions/: __init__.py
arcan/forge/models/: __init__.py  chat_history.py  conversation.py  token.py  user.py
arcan/forge/repository/: chat_history.py  conversation.py  token.py  user.py
arcan/forge/schemas/: __init__.py  chat_history.py  conversation.py  token.py  user.py
arcan/forge/service/: token.py  user.py
arcan/spells/: __init__.py  scrapping.py  self.py  self_code.md  vector_search.py
arcan/src/: agent_cmd.rs  chronos_wiring.rs  config.rs  consolidator.rs  cost.rs  daemon.rs  ergon_wiring.rs  identity_loader.rs  lib.rs  main.rs  markdown.rs  memory_observer.rs  memory_tools.rs  nous_observer.rs  opsis_observer.rs  sandbox_router.rs  shell.rs  skills.rs  spinner.rs
arcan/tests/: agent_cmd.rs  praxis_integration.rs
arcand/: Cargo.toml
arcand/src/: canonical.rs  consciousness.rs  lib.rs  mcp_registry.rs  mock.rs  rate_limit.rs  rcs_observer.rs  substrate.rs
arcand/tests/: canonical_api.rs  consciousness_test.rs  rcs_validation.rs  topology_b_e2e_arcan.rs
crates/agentd/: Cargo.toml
crates/agentd/src/: main.rs
crates/arcan-aios-adapters/: Cargo.toml
crates/arcan-aios-adapters/src/: approval.rs  autonomic.rs  capability_map.rs  embedded_autonomic.rs  gating_middleware.rs  haima_middleware.rs  lib.rs  memory.rs  provider.rs  sandbox_lifecycle.rs  shell_gate.rs  tools.rs
crates/arcan-commands/: Cargo.toml
crates/arcan-commands/src/: clear.rs  compact.rs  config_cmd.rs  consolidate.rs  context.rs  cost.rs  diff.rs  help.rs  lib.rs  memory.rs  model.rs  reasoning.rs  skill.rs  status.rs
crates/arcan-core/: Cargo.toml
crates/arcan-core/src/: aisdk.rs  context.rs  context_compiler.rs  error.rs  hooks.rs  lib.rs  lifecycle.rs  prompt.rs  protocol.rs  queue.rs  runtime.rs  state.rs
crates/arcan-daemon/: Cargo.toml
crates/arcan-daemon/src/: lib.rs  loop.rs  main.rs  mock.rs  server.rs
crates/arcan-fleet/: Cargo.toml
crates/arcan-fleet/src/: coding.rs  contracts.rs  data.rs  health.rs  lib.rs  listing.rs  vertical.rs
crates/arcan-harness/: Cargo.toml
crates/arcan-harness/src/: edit.rs  fs.rs  lib.rs  mcp.rs  memory.rs  sandbox.rs  skills.rs
crates/arcan-lago/: Cargo.toml
crates/arcan-lago/src/: approval_gate.rs  ephemeral.rs  event_map.rs  learning.rs  lib.rs  memory_projection.rs  memory_tools.rs  observation.rs  policy_middleware.rs  policy_violation.rs  promotion.rs  remote_journal.rs  repository.rs  retention.rs  sandbox_manifest.rs  sandbox_sink.rs  skill_events.rs  sse_bridge.rs  state_projection.rs  tracked_fs.rs
crates/arcan-lago/tests/: end_to_end.rs
crates/arcan-praxis/: Cargo.toml
crates/arcan-praxis/src/: config.rs  lib.rs  registry.rs  sandbox_runner.rs
crates/arcan-provider/: Cargo.toml
crates/arcan-provider-bubblewrap/: Cargo.toml
crates/arcan-provider-bubblewrap/src/: lib.rs
crates/arcan-provider-vercel/: Cargo.toml
crates/arcan-provider-vercel/src/: lib.rs
crates/arcan-provider/src/: anthropic.rs  apfel.rs  lib.rs  oauth.rs  openai.rs  rig_bridge.rs
crates/arcan-sandbox/: Cargo.toml
crates/arcan-sandbox/src/: capability.rs  error.rs  event.rs  journaled.rs  lib.rs  provider.rs  service.rs  session_store.rs  sink.rs  (+1 more)
life-arcan/: Cargo.toml
life-arcan/src/: lib.rs
(+338 files in other folders)
