[workspace]
members = [
  "crates/arcan-core",
  "crates/arcan-harness",
  "crates/arcan-store",
  "crates/arcan-provider",
  "crates/arcand",
  "crates/arcan-lago",
  "crates/arcan",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Faster linking on macOS

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
authors = ["Arcan Contributors"]
repository = "https://github.com/broomva/arcan-rs"
homepage = "https://github.com/broomva/arcan-rs"
keywords = ["agent", "llm", "runtime", "daemon", "ai"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
json-patch = "4"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
uuid = { version = "1", features = ["v4", "serde"] }
glob = "0.3"
regex = "1"
rig-core = "0.30"
rmcp = { version = "0.15", features = ["client", "transport-child-process"] }
serde_yaml = "0.9"
wait-timeout = "0.2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lago persistence layer (crates.io)
lago-api = "0.1"
lago-core = "0.1"
lago-journal = "0.1"
lago-store = "0.1"
lago-policy = "0.1"
