[package]
name = "arcan-spaces"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bridge between Arcan agent runtime and Spaces distributed networking"

[lints]
workspace = true

[features]
default = []
spacetimedb = ["dep:reqwest", "dep:toml", "dep:dirs", "dep:hex"]

[dependencies]
arcan-core = { path = "../arcan-core", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
serde_json.workspace = true
