[package]
name = "agentd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified agent daemon – Arcan runtime with Lago persistence"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
arcan-core = { path = "../arcan-core" }
arcan-harness = { path = "../arcan-harness" }
arcan-provider = { path = "../arcan-provider" }
arcan-daemon = { path = "../arcan-daemon" }
arcan-lago = { path = "../arcan-lago" }
lago-journal.workspace = true
lago-policy.workspace = true
lago-store.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
